# Portfolio-Website

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
static/: main.css  noscript.css
template/: home.html
templates/: about.html  footer.html  home.html  layout.html  projects.html  views.py
tests/: conftest.py  test_site_pages.py
website/: __init.py  __init__.py
